# VPNclient-xray-wrapper

./: CMakeLists.txt  README.md  go.mod  wrapper.go
.github/workflows/: build.yml
core/: core.go  dns.go  stats.go
include/: vpnclient_engine_windows.h
src/: vpnclient_engine_windows.c
test/: test_client.c
